# docs/swagger.yaml
@@ -19,12 +19,9 @@ definitions:
       title:
         maxLength: 100
         type: string
-      user_id:
-        type: integer
     required:
     - content
     - title
-    - user_id
     type: object
   main.CreateUserTokenPayload:
     properties:
@@ -75,6 +72,10 @@ definitions:
         type: integer
       is_active:
         type: boolean
+      role:
+        $ref: '#/definitions/store.Role'
+      role_id:
+        type: integer
       token:
         type: string
       username:
@@ -165,6 +166,17 @@ definitions:
       version:
         type: integer
     type: object
+  store.Role:
+    properties:
+      description:
+        type: string
+      id:
+        type: integer
+      level:
+        type: integer
+      name:
+        type: string
+    type: object
   store.User:
     properties:
       created_at:
@@ -175,6 +187,10 @@ definitions:
         type: integer
       is_active:
         type: boolean
+      role:
+        $ref: '#/definitions/store.Role'
+      role_id:
+        type: integer
       username:
         type: string
     type: object
@@ -597,7 +613,7 @@ paths:
       tags:
       - feed
 securityDefinitions:
-  ApiAuthKey:
+  ApiKeyAuth:
     in: header
     name: Authorization
     type: apiKey
